portfolio image thumbs moved to image thumb folders and image links updates

--- a/portfolio-pages/portfolio-web-design.html
+++ b/portfolio-pages/portfolio-web-design.html
@@ -74,61 +74,61 @@
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-unplugged.html" title="links to portfolio page with description and link to a website dev project">
-                  <img src="../img/web-design-unplugged.png" alt="Unplugged site image">
+                  <img src="img-web-design/web-design-unplugged.png" alt="Unplugged site image">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-holstee-manifesto.html" title="links to portfolio page with description and link to laying out text in a non traditional layout">
-                  <img src="../img/web-design-holstee.jpg" alt="Holstee Manifesto layout image">
+                  <img src="img-web-design/web-design-holstee.jpg" alt="Holstee Manifesto layout image">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-jubilee-austen.html" title="links to portfolio page with description and link to a one page website project">
-                  <img src="../img/web-design-jubilee-austen.png" alt="Jubilee Austen site image">
+                  <img src="img-web-design/web-design-jubilee-austen.png" alt="Jubilee Austen site image">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-rogue-pickings.html" title="links to portfolio page with description and link to a website project">
-                  <img src="../img/web-design-rogue-pickings.jpg" alt="Rogue Pickings site image">
+                  <img src="img-web-design/web-design-rogue-pickings.jpg" alt="Rogue Pickings site image">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-magic-8-ball.html" title="links to portfolio page with description and link to the magic 8 ball javascript project">
-                  <img src="../img/web-design-magic-8-ball.png" alt="Magic 8 Ball Skillcrush javascript project image">
+                  <img src="img-web-design/web-design-magic-8-ball.png" alt="Magic 8 Ball Skillcrush javascript project image">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-lolcat-clock.html" title="links to portfolio page with description and link to lolcat clock javascript project">
-                  <img src="../img/web-design-lolcat-clock.png" alt="Magic 8 Ball Skillcrush javascript project image">
+                  <img src="img-web-design/web-design-lolcat-clock.png" alt="LOL-cat clock Skillcrush javascript project image">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-buttons-opt2.html" title="links to portfolio page with custom developed buttons">
-                  <img src="../img/web-design-portfolio-buttons-opt2.png" alt="place holder thumb image to new project">
+                  <img src="img-web-design/web-design-portfolio-buttons-opt2.png" alt="version 1 of custom developed buttons image thumb">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-buttons-opt3.html" title="links to portfolio page with a second presentation of custom developed buttons">
-                  <img src="../img/web-design-buttons-opt3.png" alt="place holder thumb image to new project">
+                  <img src="img-web-design/web-design-buttons-opt3.png" alt="version 2 of custom developed buttons image thumb">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-buttons.html" title="links to portfolio page with a third presentation of custom developed buttons">
-                  <img src="../img/web-design-portfolio-buttons.png" alt="place holder thumb image to new project">
+                  <img src="img-web-design/web-design-portfolio-buttons.png" alt="version 3 of custom developed buttons image thumb">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-carousel.html" title="links to portfolio page with utilizing javascirpt and bootstrap to create a customized carousel">
-                  <img src="../img/web-design-portfolio-carousel.png" alt="place holder thumb image to new project">
+                  <img src="img-web-design/web-design-portfolio-carousel.png" alt="carousel image thumb">
                 </a>
               </div>
 
@@ -140,37 +140,37 @@
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-flexbox-template-1.html" title="links to portfolio page displaying flex-box dev solution">
-                  <img src="../img/web-design-portfolio-flexbox-template-1.png" alt="place holder thumb image to new project">
+                  <img src="img-web-design/web-design-portfolio-flexbox-template-1.png" alt="version 1 of flexbox image thumb">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-countdown-timers.html" title="links to portfolio page leveraging javascript for the countdown timer and flexbox for the layout">
-                  <img src="../img/web-design-countdown-timers.png" alt="place holder thumb image to new project">
+                  <img src="img-web-design/web-design-countdown-timers.png" alt="countdown timer image thumb">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-code-generator.html" title="links to portfolio page leveraging javascript to generate blocks of code">
-                  <img src="../img/web-design-portfolio-code-generator.png" alt="place holder thumb image to new project">
+                  <img src="img-web-design/web-design-portfolio-code-generator.png" alt="code generator image thumb">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-line-break-layout.html" title="links to portfolio page with a layout that leveraged 'rules'/divider lines">
-                  <img src="../img/web-design-web-design-portfolio-line-break-layout.png" alt="place holder thumb image to new project">
+                  <img src="img-web-design/web-design-web-design-portfolio-line-break-layout.png" alt="unique responsive line break image thumb">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-cta-overlay-hero.html" title="links to portfolio page with page layout with a cta overlay of the hero image">
-                  <img src="../img/web-design-portfolio-cta-overlay-hero.png" alt="place holder thumb image to new project">
+                  <img src="img-web-design/web-design-portfolio-cta-overlay-hero.png" alt="call to action button over image, image thumb">
                 </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-marketing-templates.html" title="links to portfolio page with page layout with a cta overlay of the hero image">
-                  <img src="../img/web-design-portfolio-flexbox-template-1-bottom-cta.png" alt="place holder thumb image to new project">
+                  <img src="img-web-design/web-design-portfolio-flexbox-template-1-bottom-cta.png" alt="version 2 of flexbox image thumb">
                 </a>
               </div>
 
@@ -182,31 +182,31 @@
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-flex-column-to-row.html" title="links to portfolio page displaying a flex column to row layout">
-                 <img src="../img/web-design-flexbox-layout-5.png" alt="place holder thumb image to new project">
+                 <img src="img-web-design/web-design-flexbox-layout-5.png" alt="version 3 of flexbox image thumb">
                </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-flex-page-layout.html" title="links to portfolio page displaying a modal">
-                 <img src="../img/web-design-flex-layout-6.png" alt="place holder thumb image to new project">
+                 <img src="img-web-design/web-design-flex-layout-6.png" alt="version 4 of flexbox image thumb">
                </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-lp-plus-slider-bar.html" title="links to portfolio page displaying a modal">
-                 <img src="../img/web-design-mobile.png" alt="place holder thumb image to new project">
+                 <img src="img-web-design/web-design-mobile.png" alt="mobile slider image thumb">
                </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-lp-order-switch.html" title="links to portfolio page">
-                 <img src="../img/web-design-lp-layout-switch.png" alt="place holder thumb image to new project">
+                 <img src="img-web-design/web-design-lp-layout-switch.png" alt="responsive layout switch from mobile to desktop image thumb">
                </a>
               </div>
 
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-carousel-modal-1.html" title="links to portfolio page displaying a modal">
-                 <img src="../img/web-portfolio-mobile-slider-buttons.png" alt="place holder thumb image to new project">
+                 <img src="img-web-design/web-portfolio-mobile-slider-buttons.png" alt="mobile slider buttons image thumb">
                </a>
               </div>
 
