web design images placed for the individual pages, mobile-slider-buttons page updated to correct page and the slider updated to mid width 568 from 480

--- a/portfolio-pages/web-design/web-design-portfolio-mobile-slider-buttons.html
+++ b/portfolio-pages/web-design/web-design-portfolio-mobile-slider-buttons.html
@@ -209,6 +209,38 @@ float: right !important;
     .expander-toggle[aria-expanded=false] > .expanded {
       display: none;
     }
+
+    /*==================
+     min width 480px
+    ===================*/
+    @media screen and (min-width:480px) {
+      .plp-top-cat-pg-hero-sm {
+        display: block;
+
+      }
+
+      .plp-top-cat-pg-hero-lg {
+        display: none;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+
+    /*==================
+     min width 568px
+    ===================*/
+    @media screen and (min-width:568px) {
+      .plp-top-cat-pg-hero-sm {
+        display: none;
+
+      }
+
+      .plp-top-cat-pg-hero-lg {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
     </style>
     <div class="shop-pg-nav-mobile">
         <h4>
