--- a/portfolio-pages/web-design/web-design-portfolio-magic-8-ball.html
+++ b/portfolio-pages/web-design/web-design-portfolio-magic-8-ball.html
@@ -97,7 +97,7 @@
                   <p><a href="web-design-portfolio-lolcat-clock.html" class="grey-text">&rarr;</a></p>
                 </div>
               </div>
-                <a href="web-design-projects-site-folder/site-folder-magic-8-ball/index.html" target="_blank"><img src="../../img/web-design-magic-8-ball.png" alt="magic 8 ball page image"> </a>
+                <a href="web-design-projects-site-folder/site-folder-magic-8-ball/index.html" target="_blank"><img src="img/web-design-magic-8-ball.png" alt="magic 8 ball page image"> </a>
             </div>
           </div>
 
