consolidated css portfolio-css-rb.css & portfolio-css-cat-pg-top.css to one doc portfolio-css.css and updated it on web-design-portfolio-flex-column-to-row page

--- a/portfolio-pages/web-design/web-design-portfolio-flex-column-to-row.html
+++ b/portfolio-pages/web-design/web-design-portfolio-flex-column-to-row.html
@@ -13,8 +13,7 @@
 
     <link rel="stylesheet" href="../../css/normalize.css">
     <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/portfolio-css-rb.css">
-    <link rel="stylesheet" href="../../css/portfolio-css-cat-pg-top.css">
+    <link rel="stylesheet" href="../../css/portfolio-css.css">
     <link rel="stylesheet" href="../../css/portfolio-css-themes.css">
     <link rel="stylesheet" href="../../css/portfolio-css-shop-by-cat.css">
     <link rel="stylesheet" href="../../css/portfolio-css-lp.css">
