combined portfolio-css-themes.css to portfolio-css.css and updated the css links on web-design-portfolio pages

--- a/portfolio-pages/web-design/web-design-portfolio-mobile-slider-buttons.html
+++ b/portfolio-pages/web-design/web-design-portfolio-mobile-slider-buttons.html
@@ -14,12 +14,10 @@
 
     <link rel="stylesheet" href="../../css/normalize.css">
     <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/portfolio-css-rb.css">
-    <link rel="stylesheet" href="../../css/portfolio-css-cat-pg-top.css">
-    <link rel="stylesheet" href="../../css/portfolio-css-themes.css">
-    <link rel="stylesheet" href="../../css/portfolio-css-shop-by-cat.css">
+    <link rel="stylesheet" href="../../css/portfolio-css.css">
+
     <link rel="stylesheet" href="../../css/portfolio-css-mobile-slider-buttons.css">
-    <link rel="stylesheet" href="../../css/portfolio-css-lp.css">
+
 
     <script src="../../js/vendor/modernizr-2.8.3.min.js"></script>
     <script src="https://use.fontawesome.com/f940d2b2b9.js"></script>
@@ -160,7 +158,7 @@ line-height: 1;
 -moz-osx-font-smoothing: grayscale;
 }
 .pull-right {
-float: right !important;
+float: right;
 }
     .expander-toggle.expander-default {
       display: block;
