--- a/portfolio-pages/web-design/web-design-portfolio-line-break-layout.html
+++ b/portfolio-pages/web-design/web-design-portfolio-line-break-layout.html
@@ -14,10 +14,8 @@
 
         <link rel="stylesheet" href="../../css/normalize.css">
         <link rel="stylesheet" href="../../css/main.css">
-        <link rel="stylesheet" href="../../css/portfolio-css-rb.css">
-        <link rel="stylesheet" href="../../css/portfolio-css-cat-pg-top.css">
-        <link rel="stylesheet" href="../../css/portfolio-css-themes.css">
-        <link rel="stylesheet" href="../../css/portfolio-css-shop-by-cat.css">
+        <link rel="stylesheet" href="../../css/portfolio-css.css">
+
         <script src="../../js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="https://use.fontawesome.com/f940d2b2b9.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
