--- a/portfolio-pages/web-design/web-design-portfolio-zz-codepen-v20200816.html
+++ b/portfolio-pages/web-design/web-design-portfolio-zz-codepen-v20200816.html
@@ -97,7 +97,7 @@ var initParticleSlider = function(){
   (psScript.addEventListener
     ? psScript.addEventListener('load', init, false)
     : psScript.onload = init);
-  psScript.src = 'https://s3-us-west-2.amazonaws.com/s.cdpn.io/23500/ps-0.9.js';
+  psScript.src = '../../js/particle-slider-2020.js';
 	psScript.setAttribute('type', 'text/javascript');
   document.body.appendChild(psScript);
 }
@@ -107,6 +107,9 @@ var initParticleSlider = function(){
   : window.onload = initParticleSlider);
 
 </script>
+<!--
+<script src="../../js/particle-slider.js"></script>
+-->
 
 <!-- ************************************************ -->
 <!-- ******* HIDE PARTICLE SLIDER option Menu ******* -->
