Additions to web dev portfolio, add web dev notes section, update date for portfolio countdown timer.

--- a/portfolio-pages/portfolio-web-design.html
+++ b/portfolio-pages/portfolio-web-design.html
@@ -72,6 +72,24 @@
         <section id="portfolio-illustration">
           <div class="full-width">
 
+            <div class="porfolio-thumb porfolio-thumb-title">
+              <a href="web-design/web-design-portfolio-dev-notes.html" title="links to portfolio page with description and link to a website dev project">
+                <img src="img-web-design/web-design-portfolio-web-dev-notes.png" alt="web dev notes image">
+              </a>
+            </div>
+
+            <div class="porfolio-thumb porfolio-thumb-title">
+              <a href="web-design/web-design-portfolio-partical-slider-in-layout.html" title="links to portfolio page with description and link to a website dev project">
+                <img src="img-web-design/web-design-portfolio-paritcal-slider.png" alt="partical slider image">
+              </a>
+            </div>
+
+            <div class="porfolio-thumb porfolio-thumb-title">
+              <a href="web-design/web-design-portfolio-two-up-slide-show.html" title="links to portfolio page with description and link to a website dev project">
+                <img src="img-web-design/web-design-portfolio-two-up-slideshow.png" alt="two up slideshow image">
+              </a>
+            </div>
+
               <div class="porfolio-thumb">
                 <a href="web-design/web-design-portfolio-unplugged.html" title="links to portfolio page with description and link to a website dev project">
                   <img src="img-web-design/web-design-unplugged.png" alt="Unplugged site image">
