--- a/portfolio-pages/web-design/web-design-portfolio-dev-notes.html
+++ b/portfolio-pages/web-design/web-design-portfolio-dev-notes.html
@@ -120,70 +120,92 @@
 
               <div class="reference-guide-nav-icons">
 
+                <!-- CHAPTER 1 -->
                 <div class="reference-guide-itm">
                   <a href="web-design-portfolio-dev-notes-mac-terminal.html" title="mac terminal notes">
 
-                    <div class="reference-guide-chapter-title" style="background-color: #ba1e47;">
+                    <div class="reference-guide-chapter-title magenta">
                       <p>Mac Terminal</p>
                     </div>
 
                   </a>
                 </div>
 
+                <!-- CHAPTER 2 -->
                 <div class="reference-guide-itm">
-                  <a href="../portfolio-web-design.html" title="links to web dev and design portfolio page">
+                  <a href="web-design-portfolio-dev-notes-git.html" title="git notes">
 
-                    <div class="reference-guide-chapter-title" style="background-color: #f6882f;">
+                    <div class="reference-guide-chapter-title tangerine">
                       <p>Git</p>
                     </div>
 
                   </a>
                 </div>
 
+                <!-- CHAPTER 3 -->
                 <div class="reference-guide-itm">
-                  <a href="../portfolio-web-design.html" title="links to web dev and design portfolio page">
+                  <a href="web-design-portfolio-dev-notes-github.html" title="github notes">
 
-                    <div class="reference-guide-chapter-title" style="background-color: #ffc233;">
+                    <div class="reference-guide-chapter-title lemon">
                       <p>GitHub</p>
                     </div>
 
                   </a>
                 </div>
 
+                <!-- CHAPTER 4 -->
                 <div class="reference-guide-itm">
-                  <a href="../portfolio-web-design.html" title="links to web dev and design portfolio page">
+                  <a href="under-construction.html" title="links to under construction page">
 
-                    <div class="reference-guide-chapter-title" style="background-color: #92c844;">
+                    <div class="reference-guide-chapter-title" style="background-color: #000000;">
+                      <div class="">
+                      <i class="fa fa-terminal fa-lg magenta-fill" aria-hidden="true"></i></div> <p>&nbsp;+&nbsp;</p>
+                      <div class=""><i class="fa fa-git fa-lg tangerine-fill" aria-hidden="true"></i></div>
+                      <p>&nbsp;+&nbsp;</p>
+                      <div class=""><i class="fa fa-github fa-lg lemon-fill" aria-hidden="true"></i></div>
+                    </div>
+
+                  </a>
+                </div>
+
+                <!-- CHAPTER 5 -->
+                <div class="reference-guide-itm">
+                  <a href="under-construction.html" title="links to under construction page">
+
+                    <div class="reference-guide-chapter-title lime">
                       <p>HTML</p>
                     </div>
 
                   </a>
                 </div>
 
+                <!-- CHAPTER 6 -->
                 <div class="reference-guide-itm">
-                  <a href="../portfolio-web-design.html" title="links to web dev and design portfolio page">
+                  <a href="under-construction.html" title="links to under construction page">
 
-                    <div class="reference-guide-chapter-title" style="background-color: #00aeef;">
+                    <div class="reference-guide-chapter-title cyan">
                       <p>CSS</p>
                     </div>
 
                   </a>
                 </div>
 
+                <!-- CHAPTER 7 -->
                 <div class="reference-guide-itm">
-                  <a href="../portfolio-web-design.html" title="links to web dev and design portfolio page">
+                  <a href="under-construction.html" title="links to under construction page">
 
-                    <div class="reference-guide-chapter-title" style="background-color: #2e3192;">
+                    <div class="reference-guide-chapter-title blueberry">
                       <p>FLEXBOX</p>
                     </div>
 
                   </a>
                 </div>
 
+                <!-- CHAPTER 8 -->
                 <div class="reference-guide-itm">
-                  <a href="../portfolio-web-design.html" title="links to web dev and design portfolio page">
+                  <a href="under-construction.html" title="links to under construction page">
 
-                    <div class="reference-guide-chapter-title" style="background-color: #181148;">
+                    <div class="reference-guide-chapter-title grape">
                       <p>FTP</p>
                     </div>
 
