--- a/portfolio-pages/web-design/web-design-portfolio-buttons-opt3.html
+++ b/portfolio-pages/web-design/web-design-portfolio-buttons-opt3.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="../../css/normalize.css">
         <link rel="stylesheet" href="../../css/main.css">
         <link rel="stylesheet" href="../../css/portfolio-css.css">
+        <link rel="stylesheet" href="../../css/web-design-portfolio-buttons-opt3.css">
         <script src="../../js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="https://use.fontawesome.com/f940d2b2b9.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
@@ -96,38 +97,6 @@
 
       <main>
         <section id="portfolio-illustration">
-          <style>
-          .holiday-toy-finder-shop-by-age-pb {
-              width: 88%;
-              margin-left: auto;
-              margin-right: auto;
-          }
-
-          .toy-pb-shop-all-block {
-            margin-top: auto;
-          }
-
-          @media screen and (min-width:500px) {
-            .holiday-toy-finder-shop-by-age-pb {
-                width: 94%;
-                margin-left: auto;
-                margin-right: auto;
-            }
-          }
-
-          @media screen and (min-width:1024px) {
-            .toy-pb-shop-all-block {
-              margin-top: 0;
-            }
-
-            .toy-pb-shop-by-age-title-block p {
-              font-size: 22px;
-              margin-bottom: auto;
-              margin-top: auto;
-            }
-
-          }
-          </style>
           <div class="dev-portflio-itm-spacing">
             <div class="theme-section">
 
